1.8 - 28.03.2023
    - updated content provider api
    - updated strings utils
    - updated http debug dump
    - some modifications needed for current archivCZSK version

1.7 - 21.03.2023
    - fixed bug when playlist contains only one item

1.6 - 15.03.2023
    - added support for playlists to provider
    - added silent run mode

1.5 - 14.03.2023
    - set additional settings for epgimport
    - added userbouquet reload using enigma instead of web interface
    - enhanced login procedure - added unknown login state and background delayed login

1.4 - 13.03.2023
    - added hls http handler

1.3 - 10.03.2023
	- added numeric and pin input box support
	- fixed reload of settings on DMM
	- fixed registering XML RPG sources for EPGLoad
	- automaticaly turn on EPGImport/EPGLoad when they are disabled

1.2 - 24.02.2023
	- added localisations support to providers and translate messages

1.1 - 20.02.2023
	- added support for shortcuts

1.0 - 07.01.2023
	- initial version