@@ -2,6 +2,7 @@
     - updated content provider api
     - updated strings utils
     - updated http debug dump
+    - updated context menu api
     - some modifications needed for current archivCZSK version
 
 1.7 - 21.03.2023
